deploy/kubernetes/test-kyverno.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-violate-all
  namespace: sock-shop-hardened
  labels:
    test: kyverno-violation
spec:
  containers:
  - name: violator
    image: alpine:3.19
    command: ["sleep", "3600"]
    securityContext:
      runAsNonRoot: false
      readOnlyRootFilesystem: false
---
apiVersion: v1
kind: Pod
metadata:
  name: test-violate-omit
  namespace: sock-shop-hardened
  labels:
    test: kyverno-violation
spec:
  containers:
  - name: no-security-context
    image: alpine:3.19
    command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: test-violate-nonroot-only
  namespace: sock-shop-hardened
  labels:
    test: kyverno-violation
spec:
  containers:
  - name: partial-violator
    image: alpine:3.19
    command: ["sleep", "3600"]
    securityContext:
      runAsNonRoot: false
      readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Pod
metadata:
  name: test-violate-rootfs-only
  namespace: sock-shop-hardened
  labels:
    test: kyverno-violation
spec:
  containers:
  - name: partial-violator-2
    image: alpine:3.19
    command: ["sleep", "3600"]
    securityContext:
      runAsNonRoot: true
      readOnlyRootFilesystem: false
