deploy/kubernetes/complete-demo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sock-shop-hardened
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  labels:
    name: carts
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts
  template:
    metadata:
      labels:
        name: carts
    spec:
      serviceAccountName: carts
      containers:
      - name: carts
        image: weaveworksdemos/carts:0.4.8
        resources:
          limits:
            cpu: 300m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: carts
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    name: carts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts-db
  labels:
    name: carts-db
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts-db
  template:
    metadata:
      labels:
        name: carts-db
    spec:
      containers:
      - name: carts-db
        image: mongo:5.0.11
        ports:
        - name: mongo
          containerPort: 27017
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  labels:
    name: carts-db
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - name: mongo
    port: 27017
    targetPort: 27017
    protocol: TCP
    appProtocol: tcp
  selector:
    name: carts-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    name: catalogue
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: catalogue
  template:
    metadata:
      labels:
        name: catalogue
    spec:
      serviceAccountName: catalogue
      containers:
      - name: catalogue
        image: weaveworksdemos/catalogue:0.3.5
        command: ["/app"]
        args:
        - -port=80
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 300
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 180
          periodSeconds: 3
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: catalogue
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    name: catalogue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-db
  labels:
    name: catalogue-db
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: catalogue-db
  template:
    metadata:
      labels:
        name: catalogue-db
    spec:
      containers:
      - name: catalogue-db
        image: weaveworksdemos/catalogue-db:0.3.0
        volumeMounts:
          - name: db-secrets
            mountPath: /etc/secrets
            readOnly: true
        ports:
        - name: mysql
          containerPort: 3306
      volumes:
        - name: db-secrets
          secret:
            secretName: mysql-credentials
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    name: catalogue-db
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - name: mysql
    port: 3306
    targetPort: 3306
    protocol: TCP
    appProtocol: tcp
  selector:
    name: catalogue-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: front-end
  template:
    metadata:
      labels:
        name: front-end
    spec:
      serviceAccountName: front-end
      containers:
      - name: front-end
        image: ghcr.io/sidecuter/front-end:latest
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 8079
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /
            port: 8079
          initialDelaySeconds: 300
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8079
          initialDelaySeconds: 30
          periodSeconds: 3
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: front-end
  namespace: sock-shop-hardened
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8079
    nodePort: 30002
  selector:
    name: front-end
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    name: orders
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: orders
  template:
    metadata:
      labels:
        name: orders
    spec:
      serviceAccountName: orders
      containers:
      - name: orders
        image: weaveworksdemos/orders:0.4.7
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: orders
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    name: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
  labels:
    name: orders-db
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: orders-db
  template:
    metadata:
      labels:
        name: orders-db
    spec:
      containers:
      - name: orders-db
        image: mongo:5.0.11
        ports:
        - name: mongo
          containerPort: 27017
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    name: orders-db
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - name: mongo
    port: 27017
    targetPort: 27017
    protocol: TCP
    appProtocol: tcp
  selector:
    name: orders-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    name: payment
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: payment
  template:
    metadata:
      labels:
        name: payment
    spec:
      serviceAccountName: payment
      containers:
      - name: payment
        image: weaveworksdemos/payment:0.4.3
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 99m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 300
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 180
          periodSeconds: 3
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: payment
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    name: payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-master
  labels:
    name: queue-master
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: queue-master
  template:
    metadata:
      labels:
        name: queue-master
    spec:
      serviceAccountName: queue-master
      containers:
      - name: queue-master
        image: weaveworksdemos/queue-master:0.3.1
        resources:
          limits:
            cpu: 300m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: queue-master
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    name: queue-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rabbitmq
  template:
    metadata:
      labels:
        name: rabbitmq
      annotations:
        prometheus.io/scrape: "false"
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.6.8-management
        ports:
        - containerPort: 15672
          name: management
        - containerPort: 5672
          name: rabbitmq
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
              - DAC_OVERRIDE
          readOnlyRootFilesystem: true
      - name: rabbitmq-exporter
        image: kbudde/rabbitmq-exporter
        ports:
        - containerPort: 9090
          name: exporter
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9090'
  labels:
    name: rabbitmq
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - port: 5672
    name: rabbitmq
    targetPort: 5672
  - port: 9090
    name: exporter
    targetPort: exporter
    protocol: TCP
  selector:
    name: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-db
  labels:
    name: session-db
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: session-db
  template:
    metadata:
      labels:
        name: session-db
      annotations:
        prometheus.io.scrape: "false"
    spec:
      containers:
      - name: session-db
        image: redis:alpine
        ports:
        - name: redis
          containerPort: 6379
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: session-db
  labels:
    name: session-db
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
    appProtocol: tcp
  selector:
    name: session-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  labels:
    name: shipping
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: shipping
  template:
    metadata:
      labels:
        name: shipping
    spec:
      serviceAccountName: shipping
      containers:
      - name: shipping
        image: weaveworksdemos/shipping:0.4.8
        resources:
          limits:
            cpu: 300m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: shipping
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    name: shipping

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    name: user
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: user
  template:
    metadata:
      labels:
        name: user
    spec:
      serviceAccountName: user
      containers:
      - name: user
        image: weaveworksdemos/user:0.4.7
        resources:
          limits:
            cpu: 300m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 300
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 180
          periodSeconds: 3
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: user
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: user
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    name: user

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  labels:
    name: user-db
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: user-db
  template:
    metadata:
      labels:
        name: user-db
    spec:
      containers:
      - name: user-db
        image: weaveworksdemos/user-db:0.3.0

        ports:
        - name: mongo
          containerPort: 27017
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  labels:
    name: user-db
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - name: mongo
    port: 27017
    targetPort: 27017
    protocol: TCP
    appProtocol: tcp
  selector:
    name: user-db

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mtls
  namespace: sock-shop-hardened
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend-permissive
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: front-end
  mtls:
    mode: PERMISSIVE
  
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-external-to-frontend
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: front-end
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"]
        paths: ["/*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-front-end-to-catalogue
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: catalogue
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/front-end"]
    to:
    - operation:
        methods: ["GET", "POST", "OPTIONS"]
        paths: [
          "/catalogue", "/catalogue*",
          "/catalogue/", "/catalogue/*",
          "/products*", "/products/*",
          "/health", "/health/*"
        ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-orders-to-user
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: user
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/orders"]
    to:
    - operation:
        methods: ["GET", "OPTIONS"]
        paths: ["/customers*", "/customer*", "/addresses*", "/address*", "/cards*", "/card*", "/health*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-front-end-to-user
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: user
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/front-end"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
        paths: [
            "/users", "/users/", "/users/*",
            "/user", "/user/", "/user/*",
            "/addresses", "/addresses/", "/addresses/*",
            "/address", "/address/", "/address/*",
            "/cards", "/cards/", "/cards/*",
            "/card", "/card/", "/card/*",
            "/login", "/login/",
            "/register", "/register/",
            "/health", "/health/*",
            "/customers*", "/customer*",
          ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-front-end-to-carts
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: carts
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/front-end"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
        paths: [
            "/carts", "/carts/", "/carts/*",
            "/cart", "/cart/", "/cart/*",
            "/health", "/health/*"
          ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-front-end-to-orders
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: orders
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/front-end"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "OPTIONS"]
        paths: [
            "/orders", "/orders/", "/orders/*",
            "/order", "/order/", "/order/*",
            "/health", "/health/*"
          ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-orders-to-payment
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: payment
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/orders"]
    to:
    - operation:
        methods: ["GET", "POST", "OPTIONS"]
        paths: [
            "/payment", "/payment*", "/payment/",
            "/payment/*", "/health", "/health/*"
          ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-orders-to-shipping
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: shipping
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/orders"]
    to:
    - operation:
        methods: ["GET", "POST", "OPTIONS"]
        paths: [
            "/shipping", "/shipping/", "/shipping/*",
            "/health", "/health/*"
          ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-orders-to-carts
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: carts
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/orders"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "OPTIONS"]
        paths: [
            "/carts", "/carts/", "/carts/*",
            "/cart", "/cart/", "/cart/*",
            "/health", "/health/*"
          ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-catalogue-to-catalogue-db
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: catalogue-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/catalogue"]
    to:
    - operation:
        ports: ["3306"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-carts-to-carts-db
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: carts-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/carts"]
    to:
    - operation:
        ports: ["27017"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-user-to-user-db
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: user-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/user"]
    to:
    - operation:
        ports: ["27017"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-orders-to-orders-db
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: orders-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/orders"]
    to:
    - operation:
        ports: ["27017"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-front-end-to-session-db
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: session-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sock-shop-hardened/sa/front-end"]
    to:
    - operation:
        ports: ["6379"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-queue-master-to-rabbitmq
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: rabbitmq
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
            "cluster.local/ns/sock-shop-hardened/sa/queue-master",
            "cluster.local/ns/sock-shop-hardened/sa/orders"
          ]
    to:
    - operation:
        ports: ["5672", "15672"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: sock-shop-hardened
spec: {}
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root-sockshop
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: check-runAsNonRoot
    match:
      any:
      - resources:
          kinds: [Pod]
          namespaces: [sock-shop-hardened]
    exclude:
      any:
      - resources:
          names:
            - "carts-db-*"
            - "catalogue-db-*"
            - "orders-db-*"
            - "user-db-*"
            - "session-db-*"
            - "rabbitmq-*"
            - "queue-master-*"
    validate:
      message: "Containers must run as non-root"
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs-sockshop
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: check-readonly-rootfs
    match:
      any:
      - resources:
          kinds: [Pod]
          namespaces: [sock-shop-hardened]
    exclude:
      any:
      - resources:
          names:
            - "catalogue-db-*"
            - "rabbitmq-*"
            - "queue-master-*"
    validate:
      message: "Root filesystem must be read-only"
      pattern:
        spec:
          containers:
          - securityContext:
              readOnlyRootFilesystem: true
